rust/tests/snapshots/test_analysis__analysis_american_steel.snap
---
source: rust/tests/test_analysis.rs
expression: analysis
---
summary:
  name: American_Steel_Problem
  sense: Minimize
  objective_count: 1
  constraint_count: 9
  variable_count: 14
  total_nonzeros: 28
  density: 0.22222
sparsity:
  min_vars_per_constraint: 2
  max_vars_per_constraint: 4
variables:
  type_distribution:
    free: 0
    unspecified: 0
    general: 14
    lower_bounded: 0
    upper_bounded: 0
    double_bounded: 0
    binary: 0
    integer: 0
    semi_continuous: 0
    semi_integer: 0
    sos: 0
  free_variables: []
  fixed_variables: []
  invalid_bounds: []
  unused_variables: []
  discrete_variable_count: 14
constraints:
  type_distribution:
    equality: 0
    less_than_equal: 0
    greater_than_equal: 9
    less_than: 0
    greater_than: 0
    sos1: 0
    sos2: 0
    lazy: 0
    user_cuts: 0
  empty_constraints: []
  singleton_constraints: []
  rhs_range:
    min: -15000
    max: 7000
    count: 9
  sos_summary:
    s1_count: 0
    s2_count: 0
    total_sos_variables: 0
coefficients:
  constraint_coeff_range:
    min: 1
    max: 1
    count: 28
  objective_coeff_range:
    min: 0.12
    max: 0.65
    count: 14
  large_coefficients: []
  small_coefficients: []
  coefficient_ratio: 8.333333333333334
issues: []
