rust/tests/snapshots/test_analysis__analysis_beer_distribution.snap
---
source: rust/tests/test_analysis.rs
expression: analysis
---
summary:
  name: Beer_Distribution_Problem
  sense: Minimize
  objective_count: 1
  constraint_count: 8
  variable_count: 15
  total_nonzeros: 30
  density: 0.25
sparsity:
  min_vars_per_constraint: 3
  max_vars_per_constraint: 5
variables:
  type_distribution:
    free: 0
    unspecified: 0
    general: 15
    lower_bounded: 0
    upper_bounded: 0
    double_bounded: 0
    binary: 0
    integer: 0
    semi_continuous: 0
    semi_integer: 0
    sos: 0
  free_variables: []
  fixed_variables: []
  invalid_bounds: []
  unused_variables: []
  discrete_variable_count: 15
constraints:
  type_distribution:
    equality: 0
    less_than_equal: 3
    greater_than_equal: 5
    less_than: 0
    greater_than: 0
    sos1: 0
    sos2: 0
  empty_constraints: []
  singleton_constraints: []
  rhs_range:
    min: 100
    max: 4000
    count: 8
  sos_summary:
    s1_count: 0
    s2_count: 0
    total_sos_variables: 0
coefficients:
  constraint_coeff_range:
    min: 1
    max: 1
    count: 30
  objective_coeff_range:
    min: 1
    max: 5
    count: 10
  large_coefficients: []
  small_coefficients: []
  coefficient_ratio: 5
issues: []
