rust/tests/snapshots/test_analysis__analysis_binary_vars.snap
---
source: rust/tests/test_analysis.rs
expression: analysis
---
summary:
  name: ~
  sense: Minimize
  objective_count: 2
  constraint_count: 2
  variable_count: 3
  total_nonzeros: 5
  density: 0.83333
sparsity:
  min_vars_per_constraint: 2
  max_vars_per_constraint: 3
variables:
  type_distribution:
    free: 0
    unspecified: 0
    general: 0
    lower_bounded: 0
    upper_bounded: 0
    double_bounded: 0
    binary: 3
    integer: 0
    semi_continuous: 0
    semi_integer: 0
    sos: 0
  free_variables: []
  fixed_variables: []
  invalid_bounds: []
  unused_variables: []
  discrete_variable_count: 3
constraints:
  type_distribution:
    equality: 0
    less_than_equal: 1
    greater_than_equal: 1
    less_than: 0
    greater_than: 0
    sos1: 0
    sos2: 0
    lazy: 0
    user_cuts: 0
  empty_constraints: []
  singleton_constraints: []
  rhs_range:
    min: 0
    max: 0
    count: 2
  sos_summary:
    s1_count: 0
    s2_count: 0
    total_sos_variables: 0
coefficients:
  constraint_coeff_range:
    min: 1
    max: 199
    count: 5
  objective_coeff_range:
    min: 0.5
    max: 8
    count: 6
  large_coefficients: []
  small_coefficients: []
  coefficient_ratio: 398
issues: []
