rust/tests/snapshots/test_analysis__analysis_boeing1.snap
---
source: rust/tests/test_analysis.rs
expression: analysis
---
summary:
  name: boeing1.lp
  sense: Minimize
  objective_count: 1
  constraint_count: 348
  variable_count: 473
  total_nonzeros: 3574
  density: 0.02171
sparsity:
  min_vars_per_constraint: 1
  max_vars_per_constraint: 314
variables:
  type_distribution:
    free: 0
    unspecified: 228
    general: 0
    lower_bounded: 0
    upper_bounded: 0
    double_bounded: 245
    binary: 0
    integer: 0
    semi_continuous: 0
    semi_integer: 0
    sos: 0
  free_variables: []
  fixed_variables: []
  invalid_bounds: []
  unused_variables: []
  discrete_variable_count: 0
constraints:
  type_distribution:
    equality: 98
    less_than_equal: 4
    greater_than_equal: 246
    less_than: 0
    greater_than: 0
    sos1: 0
    sos2: 0
    indicator: 0
    lazy: 0
    user_cuts: 0
  empty_constraints: []
  singleton_constraints:
    - name: DMSFOOAK
      variable: PBOSOAK6
      coefficient: -1
      operator: "="
      rhs: 0
    - name: MSBOSOAK
      variable: N1046AC3
      coefficient: 1
      operator: ">="
      rhs: 1
    - name: MSLAXLON
      variable: N1026AC1
      coefficient: 1
      operator: ">="
      rhs: 1
  rhs_range:
    min: 0
    max: 2952
    count: 348
  sos_summary:
    s1_count: 0
    s2_count: 0
    total_sos_variables: 0
coefficients:
  constraint_coeff_range:
    min: 0.01132
    max: 3102.58496
    count: 3574
  objective_coeff_range:
    min: 0.01132
    max: 42.82423
    count: 380
  large_coefficients: []
  small_coefficients: []
  coefficient_ratio: 274079.94346289756
issues:
  - severity: Info
    category: SingletonConstraint
    message: 3 singleton constraint(s) detected (may represent simple bounds)
    details: ~
