rust/tests/snapshots/test_analysis__analysis_computer_plant.snap
---
source: rust/tests/test_analysis.rs
expression: analysis
---
summary:
  name: Computer_Plant_Problem
  sense: Minimize
  objective_count: 1
  constraint_count: 8
  variable_count: 20
  total_nonzeros: 36
  density: 0.225
sparsity:
  min_vars_per_constraint: 4
  max_vars_per_constraint: 5
variables:
  type_distribution:
    free: 0
    unspecified: 0
    general: 16
    lower_bounded: 0
    upper_bounded: 0
    double_bounded: 0
    binary: 4
    integer: 0
    semi_continuous: 0
    semi_integer: 0
    sos: 0
  free_variables: []
  fixed_variables: []
  invalid_bounds: []
  unused_variables: []
  discrete_variable_count: 20
constraints:
  type_distribution:
    equality: 0
    less_than_equal: 4
    greater_than_equal: 4
    less_than: 0
    greater_than: 0
    sos1: 0
    sos2: 0
    indicator: 0
    lazy: 0
    user_cuts: 0
  empty_constraints: []
  singleton_constraints: []
  rhs_range:
    min: 0
    max: 1700
    count: 8
  sos_summary:
    s1_count: 0
    s2_count: 0
    total_sos_variables: 0
coefficients:
  constraint_coeff_range:
    min: 1
    max: 2000
    count: 36
  objective_coeff_range:
    min: 2
    max: 70000
    count: 20
  large_coefficients: []
  small_coefficients: []
  coefficient_ratio: 70000
issues: []
