rust/tests/snapshots/test_analysis__analysis_diet.snap
---
source: rust/tests/test_analysis.rs
expression: analysis
---
summary:
  name: diet
  sense: Minimize
  objective_count: 1
  constraint_count: 7
  variable_count: 16
  total_nonzeros: 64
  density: 0.57143
sparsity:
  min_vars_per_constraint: 6
  max_vars_per_constraint: 10
variables:
  type_distribution:
    free: 0
    unspecified: 0
    general: 0
    lower_bounded: 0
    upper_bounded: 9
    double_bounded: 7
    binary: 0
    integer: 0
    semi_continuous: 0
    semi_integer: 0
    sos: 0
  free_variables: []
  fixed_variables: []
  invalid_bounds: []
  unused_variables: []
  discrete_variable_count: 0
constraints:
  type_distribution:
    equality: 7
    less_than_equal: 0
    greater_than_equal: 0
    less_than: 0
    greater_than: 0
    sos1: 0
    sos2: 0
    indicator: 0
    lazy: 0
    user_cuts: 0
  empty_constraints: []
  singleton_constraints: []
  rhs_range:
    min: 30
    max: 50000
    count: 7
  sos_summary:
    s1_count: 0
    s2_count: 0
    total_sos_variables: 0
coefficients:
  constraint_coeff_range:
    min: 0.1
    max: 3055.2
    count: 64
  objective_coeff_range:
    min: 0.03
    max: 0.84
    count: 9
  large_coefficients: []
  small_coefficients: []
  coefficient_ratio: 101840
issues: []
